--- a/deploy-py.service
+++ b/deploy-py.service
@@ -4,8 +4,8 @@ After=syslog.target network-online.target remote-fs.target nss-lookup.target
 [Service]
 ExecStart=/usr/bin/python3 PATH_TO_DEPLOYER/deploy.py
 User=DEPLOYER_USER
-ExecReload=/bin/kill -s HUP $MAINPID
-ExecStop=/bin/kill -s QUIT $MAINPID
+ExecStop=/bin/kill -s INT $MAINPID
 PrivateTmp=true
+Restart=on-failure
 [Install]
 WantedBy=multi-user.target
